# DynamicAvatar

./: .gitignore  .gitmodules  LICENSE  Readme.md  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: deploy-front.yml
backend/: app.py  main.py  settings.py
backend/dynamic_nft_avatars/: Dockerfile  base_effect_router.py  data_store.py  dynamic_nft_avatar_effect_service.py  file_managers.py  pyproject.toml  router.py
frontend/: .env.example  Dockerfile  Readme.md
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/styles/: _general.scss  _header.scss  (+2 more)
frontend/src/crypto/: AppConnector.js
frontend/src/router/: index.js
frontend/src/store/: main.js
frontend/src/utils/: API.js  TrnView.js  confirm.js  file.js  styles.js
frontend/src/views/: ApplyPage.vue  GalleryPage.vue  LoginPage.vue  MintPage.vue  StoragePage.vue  TokenDetail.vue
ipfs-kit/: README.md
ipfs-kit/ipfs/: router.py  service.py
src/: main.js
src/assets/styles/: _sketch.scss  _variables.scss  index.scss
src/components/UI/: Confirm.vue  InputElement.vue  PageBlockActionLoading.vue  Sketch.vue  Toggle.vue  TokenMediaLoader.vue
src/components/gallery/: Contract.vue  Token.vue
src/components/helpers/: ModalController.js
src/components/preview/: AddAssets.vue  Info.vue  InfoVisual.vue  Send.vue
src/crypto/EVM/: SmartContract.js  index.js
src/crypto/helpers/: index.js
src/store/: main.js
src/utils/: API.js  AppLogger.js  alert.js  collection.js  file.js  string.js  styles.js
src/views/: ApplyPage.vue  BundlePage.vue  MintPage.vue
(+72 files in other folders)
